# gads

./: .env.example  .gitignore  Cargo.toml  README.md  local-build.sh  package.json  release.sh
npx-cli/: package.json
src/: auth.rs  client.rs  error.rs  format.rs  ids.rs  main.rs  profile.rs  query.rs  server.rs
