[package]
name = "gads"
version = "0.0.1"
edition = "2021"
authors = ["Chronist"]
license = "MIT"
description = "Google Ads MCP server & CLI"

[[bin]]
name = "gads"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.15", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
reqwest = { version = "0.12", features = ["json"] }
gcp_auth = "0.12"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
